# clinical-ai-platform

./: .dockerignore  .env  .env.example  .gitignore  AI_RULES.md  Makefile  PROJECT_SPEC.md  README.md  commands_to_start.txt  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
clinical_ai_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api_contracts.md  architecture.md  implementation_plan.md  roadmap.md
eval/: golden_set.json
examples/: ask_request.json  ask_response.json  clinical_docs.json  clinical_docs_extended.json
frontend/: Dockerfile  README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/ask/: route.ts
frontend/app/ask/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/: answer-panel.tsx  ask-form.tsx  dashboard-card.tsx  entities-panel.tsx  risk-panel.tsx  sources-list.tsx  top-nav.tsx
frontend/lib/: api.ts  types.ts
infra/: README.md  clinical-ai-base.Dockerfile
prompts/: grounded_answer_synthesis.txt
scripts/: _peek_datamix.py  _text_utils.py  benchmark_llm_backends.py  build_training_table.py  check_endpoints.py  clean_datamix.py  demo_m1.py  demo_m1.sh  demo_m4.py  download_dailymed.py  download_medlineplus.py  eval_retrieval.py  eval_retrieval_datamix.py  eval_triage_model.py  extract_signals.py  generate_cases.py  ingest_demo.py  ingest_qdrant.py  label_cases_llm.py  make_datamix.py  merge_chunks.py  parse_dailymed.py  parse_medlineplus.py  preview_datamix.py  retrieve_demo.py  train_triage_model.py
services/gateway-api/: Dockerfile  pyproject.toml
services/gateway-api/app/: main.py
services/gateway-api/gateway_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/gateway-api/tests/: test_gateway_endpoints.py
services/llm-service/: Dockerfile  pyproject.toml
services/llm-service/app/: main.py
services/llm-service/llm_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/llm-service/tests/: test_llm_endpoints.py
services/ner-service/: Dockerfile  pyproject.toml
services/ner-service/app/: main.py  ner_model.py
services/ner-service/ner_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ner-service/tests/: test_ner_endpoints.py
services/orchestrator/: Dockerfile  agent_nodes.py  agent_runtime.py  agent_state.py  pyproject.toml
services/orchestrator/agents/: __init__.py  base.py  coordinator_agent.py  types.py
services/orchestrator/app/: agent_pipeline.py  main.py  note_query.py  relevance.py  trace_store.py
services/orchestrator/app/agents/: __init__.py  base.py  clarification_agent.py  clinical_structuring.py  clinical_structuring_agent.py  coordinator.py  coordinator_bridge.py  evidence_critic.py  retrieval.py  retrieval_agent.py  safety_agent.py  scoring_agent.py  synthesis.py  synthesis_agent.py
services/orchestrator/app/prompts/: __init__.py  llm_ask.py
services/orchestrator/orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/orchestrator/tests/: test_agent_pipeline.py  test_agent_runtime.py  test_clarification_agent.py  test_clinical_structuring_agent.py  test_evidence_critic.py  test_orchestrator_endpoints.py  test_retrieval_agent.py  test_safety_agent.py  test_scoring_agent.py  test_synthesis_agent.py
services/pii-service/: Dockerfile  pyproject.toml
services/pii-service/app/: main.py  presidio.py
services/pii-service/pii_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/pii-service/tests/: test_pii_endpoints.py
services/retrieval-service/: Dockerfile  pyproject.toml
services/retrieval-service/app/: main.py
services/retrieval-service/retrieval_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/retrieval-service/tests/: test_retrieval_endpoints.py
services/scoring-service/: Dockerfile  pyproject.toml
services/scoring-service/app/: config.py  engine.py  main.py  rule_score.py  rules.py  score_math.py
services/scoring-service/app/features/: __init__.py  builder.py
services/scoring-service/app/models/: __init__.py  loader.py
services/scoring-service/app/targets/: __init__.py  base.py  cardiovascular.py  registry.py  stub_targets.py  triage.py
services/scoring-service/scoring_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/scoring-service/tests/: conftest.py  test_scoring_endpoints.py
services/shared/: __init__.py  http_client.py  llm_client.py  logging_util.py  schemas_v1.py
services/shared/tests/: test_schemas_v1.py
