[project]
name = "clinical-ai-platform"
version = "0.1.0"
description = "Clinical AI Platform"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["services"]
pythonpath = ["."]
addopts = "-v --tb=short"