[project]
name = "clinical-ai-platform"
version = "0.1.0"
description = "Clinical AI Platform"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "requests>=2.32.0",
    "lxml>=5.2.0",
    "orjson>=3.10.0",
    "datasets>=2.20.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.10.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["services"]
pythonpath = ["."]
addopts = "-v --tb=short"