[project]
name = "gateway-api"
version = "0.1.0"
description = "Gateway API for the Clinical AI Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "httpx>=0.27.0,<0.28.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "services*"]

