[project]
name = "orchestrator"
version = "0.1.0"
description = "LangGraph-based orchestrator for the Clinical AI Platform (stubbed for Milestone 0)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic>=2.8.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "asyncpg>=0.30.0,<0.31.0",
    "redis>=5.0.0,<6.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "services*", "agents*"]

